# trash-forensic

./: .gitignore  .gitleaks.toml  Cargo.toml  README.md  clippy.toml  deny.toml  mkdocs.yml
.github/: check-coverage.py
.github/workflows/: ci.yml  docs.yml  fuzz.yml
core/: Cargo.toml  README.md
core/src/: lib.rs
core/tests/: parse.rs
docs/: index.md  privacy.md  terms.md  validation.md
forensic/: Cargo.toml  README.md
forensic/src/: lib.rs
forensic/tests/: analyse.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_forensic.rs  fuzz_ios_photos.rs  fuzz_parse_dsstore.rs  fuzz_parse_index.rs  fuzz_parse_trashed_name.rs  fuzz_parse_trashinfo.rs
tests/data/: $IAB12CD.docx  $IZZ99YY.txt  README.md
trash-core/: Cargo.toml  README.md
trash-core/src/: android.rs  ios.rs  lib.rs  linux.rs  macos.rs  windows.rs
trash-core/tests/: parse.rs
trash-core/tests/data/: Photos.sqlite
trash-forensic/: Cargo.toml  README.md
trash-forensic/src/: android.rs  ios.rs  lib.rs  linux.rs  macos.rs  windows.rs
trash-forensic/tests/: analyse.rs
