[workspace]
resolver = "2"
members = ["core", "forensic"]

# Single source of truth for fields shared by every member (DRY): bump version /
# MSRV / license here once; members inherit via `field.workspace = true`.
[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.96"
license      = "Apache-2.0"
repository   = "https://github.com/SecurityRonin/recyclebin-forensic"

# Single source of truth for dependency versions (DRY): declare each once;
# members write `dep.workspace = true`. The inter-crate `recyclebin-core`
# version lives here too, so a bump touches one line.
[workspace.dependencies]
recyclebin-core = { path = "core", version = "0.1.0" }
forensicnomicon = "0.5"
chrono          = { version = "0.4", default-features = false, features = ["std"] }
thiserror       = "2"
serde           = { version = "1", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all                     = { level = "warn", priority = -1 }
pedantic                = { level = "warn", priority = -1 }
correctness             = { level = "deny",  priority = -1 }
suspicious              = { level = "deny",  priority = -1 }
unwrap_used             = { level = "deny",  priority = 0  }
expect_used             = { level = "deny",  priority = 0  }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate      = { level = "allow", priority = 1 }
missing_errors_doc      = { level = "allow", priority = 1 }
missing_panics_doc      = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap      = { level = "allow", priority = 1 }
cast_sign_loss          = { level = "allow", priority = 1 }
cast_precision_loss     = { level = "allow", priority = 1 }
