[package]
name         = "trash-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description  = "Pure-Rust read-only Windows Recycle Bin $I index reader — parses pre-Win10 (v1) and Win10+ (v2) $I metadata and pairs $I/$R files to recover deleted-file path, size, and deletion time"
license.workspace = true
authors      = ["Albert Hui <albert@securityronin.com>"]
keywords     = ["forensics", "recycle-bin", "windows", "dfir", "parser"]
categories   = ["parser-implementations"]
repository.workspace = true
homepage     = "https://github.com/SecurityRonin/trash-forensic"
documentation = "https://docs.rs/trash-core"
readme       = "README.md"
exclude      = ["tests/data/", "fuzz/"]

[features]
serde = ["dep:serde", "chrono/serde"]

[dependencies]
chrono    = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true, optional = true }
percent-encoding = { workspace = true }

[lints]
workspace = true
