[package]
name         = "trash-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description  = "Pure-Rust read-only readers for trash / deleted-file artifacts across Windows ($Recycle.Bin $I/$R), Linux (XDG .trashinfo), macOS (.DS_Store put-back), Android (MediaStore .trashed-), and iOS (Photos.sqlite) — recover original path, size, and deletion time"
license.workspace = true
authors      = ["Albert Hui <albert@securityronin.com>"]
keywords     = ["forensics", "trash", "recycle-bin", "dfir", "parser"]
categories   = ["parser-implementations"]
repository.workspace = true
homepage     = "https://github.com/SecurityRonin/trash-forensic"
documentation = "https://docs.rs/trash-core"
readme       = "README.md"
exclude      = ["tests/data/", "fuzz/"]

[features]
default = ["windows", "linux", "macos", "android", "ios"]
# Per-OS readers, each gated so a single-platform consumer drops the rest's deps.
windows = []
linux = ["dep:percent-encoding"]
macos = []
android = []
ios = ["dep:sqlite-core"]
serde = ["dep:serde", "chrono/serde"]

[dependencies]
chrono    = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true, optional = true }
percent-encoding = { workspace = true, optional = true }
sqlite-core = { workspace = true, optional = true }

[lints]
workspace = true
