[package]
name         = "trash-forensic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description  = "Forensic anomaly analysis for Windows Recycle Bin $I/$R artifacts — purged-content detection, path-traversal in stored names, and deletion-time anomalies, emitting forensicnomicon findings"
license.workspace = true
authors      = ["Albert Hui <albert@securityronin.com>"]
keywords     = ["forensics", "recycle-bin", "windows", "dfir", "anti-forensics"]
categories   = ["parser-implementations"]
repository.workspace = true
homepage     = "https://github.com/SecurityRonin/trash-forensic"
documentation = "https://docs.rs/trash-forensic"
readme       = "README.md"

[features]
default = ["windows", "linux", "macos"]
# Per-OS analyzers; each pulls the matching `trash-core` reader feature.
windows = ["trash-core/windows"]
linux = ["trash-core/linux"]
macos = ["trash-core/macos"]
serde = ["dep:serde", "trash-core/serde", "forensicnomicon/serde"]

[dependencies]
trash-core = { workspace = true }
forensicnomicon = { workspace = true }
serde           = { workspace = true, optional = true }

[dev-dependencies]
# Constructing `TrashInfo { deleted_at: Option<NaiveDateTime> }` in analyzer tests.
chrono = { workspace = true }

[lints]
workspace = true
